--- a/index.css
+++ b/index.css
@@ -2674,7 +2674,7 @@
         top: 150px;
         height: 75vh;
         width: 400px;
-        background: rgba(255, 255, 255, 0.1);
+        background: #FFFFFF;
         backdrop-filter: blur(15px);
         border-radius: 10px;
         overflow: hidden;
@@ -2690,7 +2690,7 @@
         flex-direction: column;
         align-items: center;
         justify-items: center;
-        color: #fff;
+        color:#000000;
     }
 
     .dropdown_menu .action_btn-1{
@@ -4064,9 +4064,9 @@
         flex-direction: column;     
     }
 
-    .accordion{
-        margin-right: 35rem;
-        margin-left:-1rem ;
+    .container{
+        overflow-x: hidden;
+        width: 100%;
     }
 
     .newsletter h1{
@@ -4109,15 +4109,17 @@
         display: flex;
         flex-direction: column;
         padding: 10px;
-        width:35rem;
+        margin-left: 0rem;
+        margin-top: 4rem;
+        width: 100%;
     }
 
     .footer img{
-        margin-left: -20rem;
+        margin-left: 1rem;
     }
 
     .footer h5{
-        margin-left: -20rem;
+        margin-left: 0rem;
         margin-bottom: 1rem;
     }
 
@@ -4128,15 +4130,15 @@
     }
 
     .footer-info-1 a {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
+        margin-left: 4rem;
         text-align: justify; /* Justify text for these links */
-        margin-left: -14.5rem;
     }
 
     .footer-info-2 {
-        width: 36rem;
+        width: 100%;
         margin-top: -3rem;
-        margin-left: -5rem;
+        margin-left: 0;
         display: grid;
         grid-template-columns: 1fr;
         grid-gap: 10px;
@@ -4176,6 +4178,11 @@
 
     .footer-info-2-link-newsletter button {
         width: 80%;
+    }
+
+    .footer-detail{
+        width: 100%;
+        margin-left: 0rem;
     }
 }
 
